# Elias-Aranza-LiDAR

bbox_marker_scan_ros2/: README.md  package.xml  setup.cfg  setup.py
bbox_marker_scan_ros2/bbox_marker_scan_ros2/: bbox_marker_to_scan.py
bbox_marker_scan_ros2/config/: bbox_to_scan.params.yaml
bbox_marker_scan_ros2/launch/: bbox_to_scan.launch.py
camera/: package.xml  setup.py
camera/camera/: lane_to_scan_node.py  yolo_detector_node.py  yolopv2_lane_node_xyz.py
navigation/: package.xml  setup.py
navigation/config/: finalcostmap.yaml  slam_params.yaml
navigation/launch/: full_system.launch.py
ouster_ros/ouster-ros/: CMakeLists.txt
ouster_ros/ouster-ros/config/: community_driver.rviz  community_driver_config.yaml  config.rviz  driver_params.yaml
ouster_ros/ouster-ros/config/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ouster_ros/ouster-ros/config/log/: latest_build
ouster_ros/ouster-ros/launch/: sensor.composite.launch.xml  start_lidar_all_Santora.launch.py  start_lidar_all_Santoragoated.launch.py
ouster_ros/ouster-ros/ouster-sdk/ouster_client/src/: lidar_scan.cpp
ouster_ros/ouster-ros/src/: os_image_node.cpp
pcl_filters/: CMakeLists.txt  package.xml
pcl_filters/src/: sor_filter.cpp
pcl_tutorial/pcl_tutorial/: CMakeLists.txt  package.xml
pcl_tutorial/pcl_tutorial/include/pcl_tutorial/: point_cloud_processing.hpp
pcl_tutorial/pcl_tutorial/launch/: minimal_processing_node.launch.py  minimal_processing_node_Santora.launch.py  processing_and_transform_launch.py  processing_node.launch.py
pcl_tutorial/pcl_tutorial/src/: minimal_example_node.cpp  point_cloud_processing.cpp  point_cloud_processing_node.cpp
