<?xml version="1.0"?>
<package format="3">
  <name>bbox_marker_scan_ros2</name>
  <version>0.2.0</version>
  <description>Convert 2D bounding-box MarkerArray outlines into sensor_msgs/LaserScan.</description>
  <maintainer email="elias@example.com">Elias</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
